changes in report 2

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@ img.cartoon {width: 100px; display:inline}
           </tr>
           <tr>
             <th>Date of build:</th>
-            <td>$BUILD_TIMESTAMP</td>
+            <td> $BUILD_TIMESTAMP </td>
           </tr>
           <tr>
             <th>Build duration:</th>
             <td>0.52 sec</td>
           </tr>
           <tr>
-            <th>JOB_URL:</th>
-            <td>$JOB_URL</td>
+            <th>JENKINS_URL:</th>
+            <td>$JENKINS_URL</td>
           </tr>
           <tr>
             <td colspan="2">&nbsp;</td>
@@ -119,7 +119,7 @@ img.cartoon {width: 100px; display:inline}
     <tr>
       <td>
             <img class="cartoon"
-        src="Ola-signature-logo.png"/>
+        src="https://drive.google.com/file/d/1xwIuyNzSVAIFNq7Ly9T8dX6sbBg3RxoF/view"/>
             </td>        
           <td class="message">You are receiving this email because you
         are relavent with this build<br>
