changes in report 3

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ img.cartoon {width: 100px; display:inline}
             <th>JENKINS_URL:</th>
             <td>$JENKINS_URL</td>
           </tr>
-          <tr>
+          <!-- <tr>
             <td colspan="2">&nbsp;</td>
-          </tr>
+          </tr> -->
         </tbody>
 
       </table>
@@ -119,7 +119,7 @@ img.cartoon {width: 100px; display:inline}
     <tr>
       <td>
             <img class="cartoon"
-        src="https://drive.google.com/file/d/1xwIuyNzSVAIFNq7Ly9T8dX6sbBg3RxoF/view"/>
+        src='https://cdn1.imggmi.com/uploads/2019/5/24/ca1bdd4508ebad72449db805e7f67413-full.png'/>
             </td>        
           <td class="message">You are receiving this email because you
         are relavent with this build<br>
