changes in report 4

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ img.cartoon {width: 100px; display:inline}
   <!-- news -->
   <div class="content round_border">
     <div class="status">
-      <p class="info">The build success</p>
+      <p class="info">The build $BUILD_STATUS</p>
     </div>
     <!-- status -->
     <div class="main round_border">
