changes in report 5

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ img.cartoon {width: 100px; display:inline}
 
     <div class="artifacts round_border">
       <b>Test Results:</b>
-      JOB_IS_FAILED
+      JOB_IS $BUILD_STATUS
     </div>
 
     <div class="artifacts round_border">
